1) fixed buyttons :   *) fixed link button label underline   *) fixed flat button background color 2) fixed scale widget slider color 3) fixed switch widget slider color 4) temporary fix for toolbar's button spacing issue in nemo 5) added some nemo tweaks :)

--- a/scss/gtk-3.0/applications/_nemo.scss
+++ b/scss/gtk-3.0/applications/_nemo.scss
@@ -5,13 +5,26 @@
 .nemo-window {
   .nemo-places-sidebar {
     background: colors.$surface-strong;
+    &.frame {
+      border: none;
+    }
   }
 
   .primary-toolbar {
     background: colors.$surface-moderate;
     padding: config.$spacing-small;
   }
-
+  
+  .places-treeview {
+    -NemoPlacesTreeView-disk-full-bg-color: colors.$white-weakest;
+    -NemoPlacesTreeView-disk-full-fg-color: colors.$red-normal;
+    // -NemoPlacesTreeView-disk-full-bar-width: 2px;
+    // -NemoPlacesTreeView-disk-full-bar-radius: 1px;
+    // -NemoPlacesTreeView-disk-full-bottom-padding: 1px;
+    // -NemoPlacesTreeView-disk-full-max-length: 70px;
+    // Changes the spacing b/w entries in sidebar
+    -GtkTreeView-vertical-separator: 10;
+  }
   menubar ~ separator {
     min-width: 0;
     min-height: 0;
@@ -22,6 +35,11 @@
     margin: -0.1em;
   }
 
+  // Removes the annoying separator
+  grid > paned > separator {
+    background-image: none;
+  }
+
   .nemo-window-pane {
     :selected {
       background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
@@ -30,4 +48,9 @@
       background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
     }
   }
+  /* Styles the expander on lhs
+  .view {
+    &.expander {
+    }
+  */
 }
