--- a/scss/gtk-3.0/widgets/_scale.scss
+++ b/scss/gtk-3.0/widgets/_scale.scss
@@ -8,7 +8,8 @@ scale {
     trough {
       background: colors.$black-weakest;
       slider {
-        background: darken(colors.$surface-moderate, 15%);
+        // background: darken(colors.$surface-moderate, 15%);
+        background: colors.$accent-normal;
         padding: 4px;
         margin: -4px;
         border-radius: 100%;
