--- a/scss/gtk-3.0/widgets/_switch.scss
+++ b/scss/gtk-3.0/widgets/_switch.scss
@@ -26,7 +26,7 @@ switch {
     background: color.change(colors.$accent-primary, $alpha: config.$tint-weak);
     
     slider {
-      background: colors.$red-light;
+      background: colors.$black-strong;
     }
 
     :nth-child(2) { color: colors.$black-strong; }
